# livellm-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  config.example.yaml  main.py  pyproject.toml  pytest.ini  runner.py  utils.py  websocket_client_example.html  websocket_transcription_client_example.html
.github/workflows/: ci.yml  test.yml
agent/: base.py  elevenlabs.py  gemini.py  openai.py
audio_ai/: base.py  elevenlabs.py  livellm.py  openai copy.py  openai.py
audio_ai/utils/: __init__.py  chunking.py  encoding.py  resampling.py
chart/: Chart.yaml  README.md  values-example.yaml  values.production.yaml  values.yaml
chart/templates/: configmap.yaml  deployment.yaml  secret.yaml
managers/: agent.py  audio.py  config.py  context.py  fallback.py  file_store.py  redis.py  telemetry.py  tokenizer.py  transcription_rt.py  ws.py
models/: common.py  errors.py  fallback.py  inputs.py  requests.py  responses.py  run.py  tools.py  ws.py
models/agent/: agent.py  chat.py  run.py  tools.py
models/audio/: audio.py  openai_ws.py  speak.py  transcribe.py  transcription_ws.py
routers/: agent.py  audio.py  openai.py  providers.py  transcription_ws.py  ws.py
scripts/: test_asr_ws.py
tests/: README.md  conftest.py  test_agent.py  test_agent_smoke.py  test_audio.py  test_audio_fallback.py  test_audio_smoke.py  test_context_overflow.py  test_main.py  test_providers_smoke.py  test_smoke.py  test_transcription_rt_fallback.py
