[project]
name = "livellm-proxy"
version = "1.4.5"
description = "llm proxy for various use-cases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.16.0",
    "fastapi>=0.118.0",
    "logfire[fastapi]>=4.13.2",
    "numpy>=2.3.4",
    "pydantic>=2.12.0",
    "scipy>=1.16.3",
    "audioop-lts; python_version>='3.13'",
    "pydantic-settings>=2.11.0",
    "openai-agents>=0.5.0",
    "pydantic-ai-slim[anthropic,google,groq,mcp,openai]>=1.39.0",
    "cryptography>=46.0.3",
    "redis[hiredis]>=7.1.0",
]
[project.optional-dependencies]
testing = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0"
]
